adding contour-extraction code (BDCN) and updating general scripts to work with this

--- a/notebooks/im_proc/pyramid_texture_model_CompareToMatlab2.ipynb
+++ b/notebooks/im_proc/pyramid_texture_model_CompareToMatlab2.ipynb
@@ -3,15 +3,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cde65f2f",
+   "id": "50c45f09",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "cc387b33",
+   "execution_count": 4,
+   "id": "42258589",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
     "import model_src\n",
     "import other_model_code\n",
     "from model_src import gabor_feature_extractor\n",
-    "from utils import torch_utils, numpy_utility, texture_utils\n",
+    "from utils import torch_utils, numpy_utility\n",
     "\n",
     "import pyrtools as pt\n",
     "# this is a package described at https://pyrtools.readthedocs.io/en/latest/"
@@ -39,8 +39,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "89084d58",
+   "execution_count": 3,
+   "id": "8f4e1f4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/user_data/mmhender'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a13c6be7",
    "metadata": {
     "scrolled": true
    },
@@ -51,7 +72,7 @@
      "text": [
       "#device: 1\n",
       "device#: 0\n",
-      "device name: GeForce RTX 2080 Ti\n",
+      "device name: GeForce GTX TITAN X\n",
       "\n",
       "torch: 1.8.1+cu111\n",
       "cuda:  11.1\n",
@@ -80,8 +101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ec661a8d",
+   "execution_count": 6,
+   "id": "1d7c0ca1",
    "metadata": {},
    "outputs": [
     {
@@ -111,8 +132,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "25f9024f",
+   "execution_count": 7,
+   "id": "6baf5471",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,23 +146,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "1ad8752f",
+   "execution_count": 12,
+   "id": "8bb16767",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time elapsed: 1.76598 s\n",
-      "[0, 3]\n",
-      "64\n",
-      "[1, 2]\n",
-      "128\n",
-      "[2, 1]\n",
-      "256\n",
-      "[3, 0]\n",
-      "512\n"
+     "ename": "TypeError",
+     "evalue": "__init__() got an unexpected keyword argument 'is_complex'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-c1b17781ca6a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m             \u001b[0mreal_spatshift_within_scale_crosscorrs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreal_spatshift_across_scale_crosscorrs\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     get_higher_order_features(_fmaps_fn, images, prf_params, sample_batch_size=20, include_autocorrs=True, include_crosscorrs=True, \\\n\u001b[0;32m---> 20\u001b[0;31m                               autocorr_output_pix=7, autocorr_output_pix_lowpass = 5, n_prf_sd_out=2, aperture=1.0, device=device)\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-9-0f8038840f23>\u001b[0m in \u001b[0;36mget_higher_order_features\u001b[0;34m(_fmaps_fn, images, prf_params, sample_batch_size, include_autocorrs, include_crosscorrs, autocorr_output_pix, autocorr_output_pix_lowpass, n_prf_sd_out, aperture, device)\u001b[0m\n\u001b[1;32m     90\u001b[0m         \u001b[0mbb\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbb\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 92\u001b[0;31m         \u001b[0mfmaps_complex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfmaps_resid\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfmaps_lowpass_recon\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfmaps_coarser_upsampled\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_fmaps_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimages\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mbatch_inds\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mto_torch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     93\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     94\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mbb\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/myenv/lib/python3.7/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    887\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    888\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 889\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    890\u001b[0m         for hook in itertools.chain(\n\u001b[1;32m    891\u001b[0m                 \u001b[0m_global_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-11-da087912e1d9>\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, image_batch, to_torch, device)\u001b[0m\n\u001b[1;32m     18\u001b[0m             \u001b[0;31m# Call the pyramid generation code here, get all features for this image.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;31m#             pyr = pt.pyramids.SteerablePyramidFreq(image_batch[ii,0,:,:], is_complex=True, height = self.pyr_height, order = self.n_ori-1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m             \u001b[0mpyr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyramids\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSteerablePyramidSpace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_batch\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mii\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mis_complex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheight\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyr_height\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_ori\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpyr\u001b[0m \u001b[0;31m# storing the most recently generated pyramid, in case we need its properties later\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'is_complex'"
      ]
     }
    ],
@@ -174,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9ec03bfd",
+   "id": "b17d076a",
    "metadata": {},
    "outputs": [
     {
@@ -308,8 +328,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "8ebf7be3",
+   "execution_count": 11,
+   "id": "f889551c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +351,9 @@
     "        for ii in range(batch_size):\n",
     "            \n",
     "            # Call the pyramid generation code here, get all features for this image.\n",
-    "            pyr = pt.pyramids.SteerablePyramidFreq(image_batch[ii,0,:,:], is_complex=True, height = self.pyr_height, order = self.n_ori-1)\n",
+    "#             pyr = pt.pyramids.SteerablePyramidFreq(image_batch[ii,0,:,:], is_complex=True, height = self.pyr_height, order = self.n_ori-1)\n",
+    "            pyr = pt.pyramids.SteerablePyramidSpace(image_batch[ii,0,:,:], is_complex=True, height = self.pyr_height, order = self.n_ori-1)\n",
+    "            \n",
     "            self.pyr = pyr # storing the most recently generated pyramid, in case we need its properties later\n",
     "            \n",
     "            if ii==0:  \n",
@@ -430,8 +452,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "987ed0b0",
+   "execution_count": 9,
+   "id": "6bdba84d",
    "metadata": {},
    "outputs": [],
    "source": [
