updating notebooks for plotting and fitting, Sept 17

--- a/notebooks/plot_results/plot_gabor_model.ipynb
+++ b/notebooks/plot_results/plot_gabor_model.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ad28bbc3",
+   "id": "d05f93f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,8 @@
     "from matplotlib import cm\n",
     "import seaborn as sns\n",
     "import cortex\n",
+    "import copy\n",
+    "\n",
     "%matplotlib inline\n",
     "\n",
     "fpX = np.float32\n",
@@ -23,14 +25,15 @@
     "import torch \n",
     "root = os.path.dirname(os.path.dirname(os.getcwd()))\n",
     "sys.path.append(os.path.join(root, 'code'))\n",
-    "from utils import plot_utils\n",
+    "from utils import plot_utils, nsd_utils\n",
+    "from utils.plot_utils import get_full_surface\n",
     "plot_utils.set_plotting_defaults()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9b29ac31",
+   "execution_count": 2,
+   "id": "9bd705b1",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +42,40 @@
      "text": [
       "loading from /user_data/mmhender/imStat/model_fits/S01_surface/gabor_solo_ridge_4ori_4sf/Sep-09-2021_2224_03/all_fit_params\n",
       "\n",
-      "dict_keys(['voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'aperture', 'aperture_rf_range', 'models', 'n_prf_sd_out', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'ridge', 'debug', 'up_to_sess', 'shuff_rnd_seed', 'feature_table_simple', 'filter_pars_simple', 'orient_filters_simple', 'feature_table_complex', 'filter_pars_complex', 'orient_filters_complex', 'feature_types_exclude', 'feature_info', 'nonlin_fn', 'padding_mode', 'autocorr_output_pix'])\n"
+      "dict_keys(['voxel_mask', 'brain_nii_shape', 'image_order', 'voxel_index', 'voxel_roi', 'voxel_ncsnr', 'aperture', 'aperture_rf_range', 'models', 'n_prf_sd_out', 'best_losses', 'best_lambdas', 'best_params', 'lambdas', 'val_cc', 'val_r2', 'partial_masks', 'partial_version_names', 'zscore_features', 'ridge', 'debug', 'up_to_sess', 'shuff_rnd_seed', 'feature_table_simple', 'filter_pars_simple', 'orient_filters_simple', 'feature_table_complex', 'filter_pars_complex', 'orient_filters_complex', 'feature_types_exclude', 'feature_info', 'nonlin_fn', 'padding_mode', 'autocorr_output_pix'])\n",
+      "voxel_mask: shape (453622,)\n",
+      "image_order: shape (7500,)\n",
+      "voxel_index: len 1\n",
+      "voxel_roi: len 2\n",
+      "voxel_ncsnr: shape (453622,)\n",
+      "aperture = 1.0\n",
+      "aperture_rf_range = 1.1\n",
+      "models: shape (875, 3)\n",
+      "n_prf_sd_out = 2\n",
+      "best_losses: shape (66545, 1)\n",
+      "best_lambdas: shape (66545, 1)\n",
+      "best_params: len 6\n",
+      "lambdas: shape (9,)\n",
+      "val_cc: shape (66545, 1)\n",
+      "val_r2: shape (66545, 1)\n",
+      "partial_masks: shape (1, 16)\n",
+      "partial_version_names: len 1\n",
+      "zscore_features = True\n",
+      "ridge = True\n",
+      "debug = 0\n",
+      "up_to_sess = 10\n",
+      "shuff_rnd_seed = 262209\n",
+      "feature_table_simple: unknown\n",
+      "filter_pars_simple: unknown\n",
+      "orient_filters_simple: shape (8, 1, 12, 12)\n",
+      "feature_table_complex: unknown\n",
+      "filter_pars_complex: unknown\n",
+      "orient_filters_complex: shape (4, 1, 12, 12)\n",
+      "feature_types_exclude: len 11\n",
+      "feature_info: len 2\n",
+      "nonlin_fn = False\n",
+      "padding_mode = circular\n",
+      "autocorr_output_pix = 5\n"
      ]
     }
    ],
@@ -48,36 +84,11 @@
     "\n",
     "subject = 1\n",
     "volume_space=False\n",
-    "n_from_end = 0; # if zero, load most recent; if positive, load second most recent etc.\n",
-    "\n",
     "fitting_type = 'gabor_solo_ridge_4ori_4sf'\n",
-    "\n",
     "root = os.path.dirname(os.path.dirname(os.getcwd()))\n",
-    "if volume_space:\n",
-    "    folder2load = os.path.join(root, 'model_fits','S%02d'%subject, fitting_type)\n",
-    "else:\n",
-    "    folder2load = os.path.join(root, 'model_fits','S%02d_surface'%subject, fitting_type)\n",
-    "# within this folder, assuming we want the most recent version that was saved\n",
-    "files_in_dir = os.listdir(folder2load)\n",
-    "from datetime import datetime\n",
-    "my_dates = [f for f in files_in_dir if 'ipynb' not in f and 'DEBUG' not in f]\n",
-    "my_dates.sort(key=lambda date: datetime.strptime(date, \"%b-%d-%Y_%H%M_%S\"))\n",
-    "most_recent_date = my_dates[-1-n_from_end]\n",
+    "out, fig_save_folder = plot_utils.load_fit_results(subject, volume_space, fitting_type, n_from_end=0, root=root, verbose=True);\n",
+    "plot_utils.print_output_summary(out)\n",
     "\n",
-    "# most_recent_date = 'Aug-30-2021_0807_16'\n",
-    "# most_recent_date = 'Aug-30-2021_2008_22'\n",
-    "# most_recent_date = 'Jul-06-2021_0356'\n",
-    "\n",
-    "subfolder2load = os.path.join(folder2load, most_recent_date)\n",
-    "file2load = os.listdir(subfolder2load)[0]\n",
-    "fullfile2load = os.path.join(subfolder2load, file2load)\n",
-    "\n",
-    "print('loading from %s\\n'%fullfile2load)\n",
-    "\n",
-    "out = torch.load(fullfile2load)\n",
-    "print(out.keys())\n",
-    "\n",
-    "fig_save_folder = os.path.join(root,'figures','S%02d'%subject, fitting_type, most_recent_date)\n",
     "if not os.path.exists(fig_save_folder):\n",
     "    os.makedirs(fig_save_folder)"
    ]
@@ -85,7 +96,76 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8e47feb4",
+   "id": "341abe54",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[-0.00787315],\n",
+       "        [ 0.01070587],\n",
+       "        [ 0.0230214 ],\n",
+       "        ...,\n",
+       "        [ 0.07685467],\n",
+       "        [-0.00370785],\n",
+       "        [ 0.06441928]],\n",
+       "\n",
+       "       [[-0.01085788],\n",
+       "        [ 0.01092643],\n",
+       "        [ 0.02015583],\n",
+       "        ...,\n",
+       "        [ 0.07357261],\n",
+       "        [ 0.00295267],\n",
+       "        [ 0.06162226]],\n",
+       "\n",
+       "       [[-0.01240762],\n",
+       "        [ 0.01661349],\n",
+       "        [ 0.01606579],\n",
+       "        ...,\n",
+       "        [ 0.06989071],\n",
+       "        [ 0.00789268],\n",
+       "        [ 0.05535429]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[-0.01700291],\n",
+       "        [ 0.02027716],\n",
+       "        [ 0.00389692],\n",
+       "        ...,\n",
+       "        [ 0.01890737],\n",
+       "        [ 0.00792023],\n",
+       "        [-0.04658058]],\n",
+       "\n",
+       "       [[ 0.02741775],\n",
+       "        [-0.01391174],\n",
+       "        [ 0.02678339],\n",
+       "        ...,\n",
+       "        [-0.02442075],\n",
+       "        [-0.01978069],\n",
+       "        [-0.00715839]],\n",
+       "\n",
+       "       [[ 0.01540555],\n",
+       "        [-0.01149112],\n",
+       "        [ 0.00441342],\n",
+       "        ...,\n",
+       "        [-0.037479  ],\n",
+       "        [ 0.00372207],\n",
+       "        [ 0.0042133 ]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out['best_params'][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "dd9fbb69",
    "metadata": {},
    "outputs": [
     {
@@ -105,80 +185,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "2fb3d68d",
+   "execution_count": 3,
+   "id": "d4d4e69c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot_utils.plot_fit_summary_volume_space(subject, fitting_type,out, fig_save_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dadf3c78",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Cannot use this function for data that is in surface space, should use pycortex to visualize instead.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-a201cd72b0c2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplot_utils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot_fit_summary_volume_space\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubject\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfitting_type\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfig_save_folder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/user_data/mmhender/imStat/code/utils/plot_utils.py\u001b[0m in \u001b[0;36mplot_fit_summary_volume_space\u001b[0;34m(subject, fitting_type, out, screen_eccen_deg, fig_save_folder)\u001b[0m\n\u001b[1;32m    153\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    154\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'brain_nii_shape'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 155\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Cannot use this function for data that is in surface space, should use pycortex to visualize instead.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    156\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    157\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Cannot use this function for data that is in surface space, should use pycortex to visualize instead."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "navigate browser to: 127.0.0.1:44447\n",
+      "Started server on port 44447\n"
      ]
     }
    ],
    "source": [
-    "plot_utils.plot_fit_summary_volume_space(subject, fitting_type,out, fig_save_folder)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d67e763",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "substr = 'subj01'\n",
-    "\n",
-    "cmin = 0.0\n",
-    "cmax = 0.8\n",
-    "rmin = 0.0\n",
-    "rmax = 0.6\n",
-    "vemin = -0.05\n",
-    "vemax = 0.05\n",
-    "\n",
-    "eccen_deg = 8.4\n",
-    "\n",
-    "dat2plot = {'pRF eccentricity': cortex.Vertex(data = get_full_surface(best_ecc*eccen_deg, voxel_mask), subject=substr, cmap='PRGn', vmin=0, vmax=7), \\\n",
-    "            'pRF angle': cortex.Vertex(data = get_full_surface(best_ang*180/np.pi, voxel_mask), subject=substr, cmap='Retinotopy_RYBCR', vmin=-180, vmax=180), \\\n",
-    "            'pRF size': cortex.Vertex(data = get_full_surface(best_size*eccen_deg, voxel_mask), subject=substr, cmap='PRGn', vmin=0, vmax=4), \\\n",
-    "            'Correlation (validation set)': cortex.Vertex(data = get_full_surface(val_cc, voxel_mask), subject=substr, cmap='PuBu', vmin=cmin, vmax=cmax), \\\n",
-    "            'R2 (validation set)': cortex.Vertex(data = get_full_surface(val_r2, voxel_mask), subject=substr, cmap='PuBu', vmin=rmin, vmax=rmax), \\\n",
-    "           }\n",
-    "\n",
-    "# for fi, ff in enumerate(feature_info[1]):\n",
-    "#     dat2plot['Var expl: %s'%ff] = cortex.Vertex(data = get_full_surface(var_expl[:,fi], voxel_mask), subject=substr, vmin=vemin, vmax=vemax)\n",
-    "    \n",
-    "dat2plot.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "b565525c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_full_surface(values, voxel_mask):\n",
-    "    \"\"\"\n",
-    "    Put values for voxels that were analyzed back into their correct coordinates in full surface space matrix.\n",
-    "    \"\"\"\n",
-    "    full_vals = deepcopy(voxel_mask).astype('float64')\n",
-    "    full_vals[voxel_mask==0] = np.nan\n",
-    "    full_vals[voxel_mask==1] = values\n",
-    "    \n",
-    "    return full_vals"
+    "plot_utils.plot_summary_pycortex(subject, fitting_type, out, port=44447)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "414f7e10",
+   "id": "10dcff2c",
    "metadata": {},
    "outputs": [
     {
@@ -198,8 +235,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "515e9bf3",
+   "execution_count": 5,
+   "id": "c6aecf1c",
    "metadata": {},
    "outputs": [
     {
@@ -219,8 +256,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "87e98ab0",
+   "execution_count": 6,
+   "id": "b20948cf",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dc191853",
+   "id": "977fbdba",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0560b2f7",
+   "id": "81ad22d4",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d33c1a1c",
+   "id": "767f3875",
    "metadata": {},
    "outputs": [
     {
