--- a/notebooks/plot_results/testing_pycortex.ipynb
+++ b/notebooks/plot_results/testing_pycortex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,8 @@
     "from copy import deepcopy\n",
     "\n",
     "sys.path.append('/user_data/mmhender/imStat/code/')\n",
-    "from utils import nsd_utils"
+    "from utils import nsd_utils, plot_utils\n",
+    "from utils.plot_utils import get_full_surface"
    ]
   },
   {
@@ -76,19 +77,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'utils'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-6059d71f331b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot_utils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_full_surface\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'utils'"
+     ]
+    }
+   ],
    "source": [
-    "def get_full_surface(values, voxel_mask):\n",
-    "    \"\"\"\n",
-    "    Put values for voxels that were analyzed back into their correct coordinates in full surface space matrix.\n",
-    "    \"\"\"\n",
-    "    full_vals = deepcopy(voxel_mask).astype('float64')\n",
-    "    full_vals[voxel_mask==0] = np.nan\n",
-    "    full_vals[voxel_mask==1] = values\n",
-    "    \n",
-    "    return full_vals"
+    "from utils.plot_utils import get_full_surface\n"
    ]
   },
   {
