Updating test notebooks Sept 19

--- a/notebooks/testing/test_bdcn_fitting.ipynb
+++ b/notebooks/testing/test_bdcn_fitting.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f29f1ba5",
+   "id": "9c44a362",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "# from model_src import fwrf_predict as fwrf_predict\n",
     "from model_src import bdcn_features\n",
     "\n",
-    "from model_fitting import initialize_fitting as initialize_fitting\n",
+    "from model_fitting import initialize_fittinh, fwrf_fit\n",
     "\n",
     "bdcn_path = '/user_data/mmhender/toolboxes/BDCN/'\n",
     "\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "a806f7ab",
+   "id": "d8504981",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "71098171",
+   "id": "44b7c654",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c2a7b98c",
+   "id": "e47e0428",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4c82085e",
+   "id": "903d3f2d",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "ededb4b0",
+   "id": "0c586092",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "7dd2e990",
+   "id": "4776f119",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "b0228209",
+   "id": "1765223a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "e54d2ea4",
+   "id": "7e0156a3",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a2b49477",
+   "id": "ea29ce61",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "db75e4a9",
+   "id": "06f9c1f1",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "a3a936b9",
+   "id": "e11f0f24",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "cf9cb22a",
+   "id": "2e911326",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "8db4f605",
+   "id": "087b1f90",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "882dd179",
+   "id": "75ef1884",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "35236bff",
+   "id": "8f42c7ef",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "04320c32",
+   "id": "a89bd8d1",
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "832fe039",
+   "id": "769bd6c2",
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "3672e63e",
+   "id": "f610c563",
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "d4356d8c",
+   "id": "689ce6f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "5e9e023d",
+   "id": "df8f8c2a",
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "f5385432",
+   "id": "9fe904d8",
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "71544d4d",
+   "id": "0fc7aec1",
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "56ece875",
+   "id": "5ee206d2",
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "ba490430",
+   "id": "a145cd3f",
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "d570bdaf",
+   "id": "007f4516",
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "053caf8f",
+   "id": "d6891226",
    "metadata": {},
    "outputs": [],
    "source": [
