--- a/notebooks/testing/test_fitting.ipynb
+++ b/notebooks/testing/test_fitting.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "4b0708c4",
+   "execution_count": 14,
+   "id": "6499fc84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +37,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "2fdc98ef",
+   "execution_count": 15,
+   "id": "361b9e3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,24 +65,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44f8af47",
+   "id": "1c982987",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "4906db2e",
+   "execution_count": 16,
+   "id": "d8c05a7e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time Stamp: Sep-16-2021_1242_03\n",
+      "Time Stamp: Sep-17-2021_1636_05\n",
       "\n",
-      "Will save final output file to /user_data/mmhender/imStat/model_fits/S01/sketch_tokens/Sep-16-2021_1242_03_DEBUG/\n",
+      "Will save final output file to /user_data/mmhender/imStat/model_fits/S01/sketch_tokens/Sep-17-2021_1636_05_DEBUG/\n",
       "\n",
       "\n",
       "Volume space: ROI defs are located at: /lab_data/tarrlab/common/datasets/NSD/nsddata/ppdata/subj01/func1pt8mm/roi\n",
@@ -217,8 +217,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "id": "df64bd72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(image_order_trn.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
-   "id": "7b2b043c",
+   "id": "e6a85e04",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1d978fe6",
+   "id": "5411f9eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fb9d3aa8",
+   "id": "f4940745",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "97fc4646",
+   "id": "35d6170e",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f7e99780",
+   "id": "dd472826",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "94c51ede",
+   "id": "699914d9",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3cb8ff1f",
+   "id": "c2d1e228",
    "metadata": {},
    "outputs": [
     {
