notebooks for testing code with precomputed gabor/pyramid features

--- a/notebooks/testing/test_fitting.ipynb
+++ b/notebooks/testing/test_fitting.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "6499fc84",
+   "execution_count": 3,
+   "id": "97f9114a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,14 +21,12 @@
     "# import custom modules\n",
     "code_dir = '/user_data/mmhender/imStat/code/'\n",
     "sys.path.append(code_dir)\n",
-    "from model_src import fwrf_fit as fwrf_fit\n",
-    "from model_src import fwrf_predict as fwrf_predict\n",
-    "from model_src import texture_statistics_gabor, texture_statistics_pyramid, bdcn_features, sketch_token_features\n",
+    "from feature_extraction import texture_statistics_gabor, texture_statistics_pyramid, bdcn_features, sketch_token_features\n",
     "from utils import nsd_utils, roi_utils\n",
     "\n",
     "bdcn_path = '/user_data/mmhender/toolboxes/BDCN/'\n",
     "\n",
-    "from model_fitting import initialize_fitting, merge_features\n",
+    "from model_fitting import initialize_fitting, merge_features, fwrf_fit, fwrf_predict\n",
     "\n",
     "fpX = np.float32\n",
     "device = 'cpu:0'\n",
@@ -37,12 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "361b9e3d",
+   "execution_count": 4,
+   "id": "6d1aed79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fitting_type='sketch_tokens'\n",
+    "fitting_type='gabor_texture'\n",
     "do_avg_pool=True\n",
     "subject=1\n",
     "volume_space = True\n",
@@ -65,24 +63,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c982987",
+   "id": "6a24f08e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "d8c05a7e",
+   "execution_count": 5,
+   "id": "bdb13b3c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time Stamp: Sep-17-2021_1636_05\n",
+      "Time Stamp: Sep-19-2021_1203_15\n",
       "\n",
-      "Will save final output file to /user_data/mmhender/imStat/model_fits/S01/sketch_tokens/Sep-17-2021_1636_05_DEBUG/\n",
+      "Will save final output file to /user_data/mmhender/imStat/model_fits/S01/texture_gabor_ridge_4ori_4sf/Sep-19-2021_1203_15_DEBUG/\n",
       "\n",
       "\n",
       "Volume space: ROI defs are located at: /lab_data/tarrlab/common/datasets/NSD/nsddata/ppdata/subj01/func1pt8mm/roi\n",
@@ -218,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "df64bd72",
+   "id": "e206de52",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e6a85e04",
+   "id": "a22757ab",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5411f9eb",
+   "id": "0e396d7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f4940745",
+   "id": "615bd700",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "35d6170e",
+   "id": "f7ab3916",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "dd472826",
+   "id": "a80cbde2",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "699914d9",
+   "id": "e287e046",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c2d1e228",
+   "id": "0830915a",
    "metadata": {},
    "outputs": [
     {
